    * Setting a check_type or service to ignore no longer requires a reinventory
      Note: If the ignore rule is removed the services will reappear
    * Config creation: The ignore services rule now also applies to custom, active
                       and legacy checks
    * Predictive monitoring: correctly handle spaces in variable names (thanks
       to Karl Golland)

    Checks & Agents:
    * esx_hostystem multipath: criticize standby paths only if not equal to active paths
    * mk_logwatch: fixed bug when rewriting logwatch messages
    * check_mk: Re-inventory is no longer required when a service is ignored via rule
    * check_mk: Now possible to assign services to clusters without the need to
                reinventorize
    * lnx_if: Fixed crash on missing "Address" field
    * viprinet_router: Now able to set required target state via rule
    * windows_agent: Now available as 64 bit version
    * agent_vsphere: fix problem where sensors were missing when
      you queried multiple host systems via vCenter
    * apache_status: fix exception if parameter is None
    * cached checks: no longer output cached data if the age of the
                     cache file is twice the maximum cache age
    * windows agent: no longer tries to execute directories
    * FIX: esx_vsphere_datastores: Fix incomplete performance data and Perf-O-Meter
    * fileinfo: no longer inventorize missing files(reported by windows agent)
    * cluster hosts: removed agent version output from Check_MK service (this
      was misleading for different agent versions on multiple nodes)
    * job check: better handling of unexpected agent output
    * lnx_thermal: Added check for linux thermal sensors (e.g. acpi)
    * hwg_temp: Make WATO-Rule "Room Temperature" match, add man page, graph
                and Perf-O-Meter
    * ps.perf: Support Windows with new plugin "psperf.bat". wmicchecks.bat
               is obsolete now.