@@ -10,6 +10,7 @@
                        and legacy checks
     * Predictive monitoring: correctly handle spaces in variable names (thanks
        to Karl Golland)
+    * New man page browser for console (cmk -m)
 
     Checks & Agents:
     * esx_hostystem multipath: criticize standby paths only if not equal to active paths
